k8s/inventory-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-lb
  namespace: personal-workspace
  labels:
    app: inventory-service
spec:
  type: LoadBalancer
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
