k8s/inventory-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-nodeport
  namespace: personal-workspace
  labels:
    app: inventory-service
spec:
  type: NodePort
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30091
      protocol: TCP
