k8s/inventory-service-otlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: observability-demo
  labels:
    app: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: shashtaazaa/inventory-service:1.4.0-groundcover
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: observability-demo
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
    - port: 8080
      targetPort: 8080
