k8s/jaeger-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-lb
  namespace: personal-workspace
  labels:
    app: jaeger
spec:
  type: LoadBalancer
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 80
      targetPort: 16686
      protocol: TCP
