k8s/orders-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service-lb
  namespace: personal-workspace
  labels:
    app: orders-service
spec:
  type: LoadBalancer
  selector:
    app: orders-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
