k8s/orders-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service-nodeport
  namespace: personal-workspace
  labels:
    app: orders-service
spec:
  type: NodePort
  selector:
    app: orders-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30090
      protocol: TCP
