k8s/orders-service-otlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: observability-demo
  labels:
    app: orders-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: shashtaazaa/orders-service:1.4.0-groundcover
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: observability-demo
  labels:
    app: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
    - port: 8080
      targetPort: 8080
